# OvumLanguage

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CODEBASE_STRUCTURE.md  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  README.md  install.sh
.github/workflows/: ci_tests.yml
cmake/: SetCompilerOptions.cmake
docs/: README.md
docs/reference/: README.md  builtin_types.md  code_examples.md  control_flow.md  design.md  expressions_and_operators.md  lexical_structure.md  nullable.md  object_model.md  primitive_types.md  runtime.md  syntax.md  system_library.md  types.md  unsafe.md
lib/: CMakeLists.txt
lib/lexer/: Lexer.cpp  Lexer.hpp  LexerError.hpp  utils.cpp  utils.hpp
lib/lexer/handlers/: CharHandler.cpp  CharHandler.hpp  DefaultHandler.cpp  DefaultHandler.hpp  Handler.hpp  IdentifierHandler.cpp  IdentifierHandler.hpp  NewlineHandler.cpp  NewlineHandler.hpp  NumberHandler.cpp  NumberHandler.hpp  OperatorHandler.cpp  OperatorHandler.hpp  PunctHandler.cpp  PunctHandler.hpp  SlashHandler.cpp  SlashHandler.hpp  StringHandler.cpp  StringHandler.hpp  WhitespaceHandler.cpp  WhitespaceHandler.hpp
lib/lexer/tokens/: CommentToken.hpp  EofToken.hpp  IdentToken.hpp  KeywordToken.hpp  LiteralToken.hpp  NewlineToken.hpp  OperatorToken.hpp  PunctToken.hpp  Token.hpp  TokenFactory.hpp  TokenType.hpp  TokenVisitor.hpp
lib/lexer/values/: BoolValue.hpp  (+5 more)
lib/mylib/: CMakeLists.txt
lib/ui/: CMakeLists.txt
tests/: CMakeLists.txt  main_test.cpp  test_functions.hpp
tests/test_suites/: ProjectIntegrationTestSuite.cpp  ProjectIntegrationTestSuite.hpp
